--- a/pa1/README
+++ b/pa1/README
@@ -1,1 +1,4 @@
-Update this.
+I don't know whether to laugh or cry, we put about 4 days to this project and didn't manage to finish it.
+
+But the server manages to send part of all the examples given.
+
